<resources>
    <string name="no_read_message">"···"</string>
    <string name="app_name">高交会</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="introduction_zh"><u>介绍</u></string>
    <string name="introduction_en"><u>Introduction</u></string>
    <string name="app_version">v1.0</string>
    <string name="attentionyes">关注成功</string>
    <string name="attentionno">取消关注</string>
    <string name="near_merchant">附近商铺</string>
    <string name="proj_name">ShareSDK_TPL</string>
    <string name="share_sdk">Share SDK</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="add">添加</string>
    <string name="map">地图</string>
    <string name="union">合并</string>
    <string name="split">拆分</string>
    <string name="book">预定</string>
    <string name="unsubscribe">退订</string>
    <string name="isToMerge">是否进行合并</string>
    <string name="isToBook">是否预定该展位</string>
    <string name="isToSplit">是否拆分该展位</string>
    <string name="contact">联系人:</string>
    <string name="selectOne">请选择一个展位</string>
    <string name="smallBatch">该展位不能拆分</string>
    <string name="onlyOneBatch">只能选择一个展位</string>
    <string name="product_search">输入关键字</string>
    <string name="company_search">展商搜索</string>
    <string name="company_edit">展商编辑</string>
    <string name="input_company_name">请输入展商名称</string>
    <string name="notSelectBatch">您没有选择要合并的展位</string>
    <string name="selectOneOver">请选择两个或两个以上展位</string>
    <string name="verification_login">用户名和密码不能为空</string>
    <string name="h72">H7.2</string>
    <string name="cmef">CMEF</string>
    <string name="icmd">ICMD</string>
    <string name="other">Other</string>
    <string name="pchinews_news">会议新闻</string>
    <string name="pchinews_press">新闻发布会</string>
    <string name="pchinews_exhibition">展会</string>
    <string name="pchinews_activity">活动</string>
    <string name="register_note_en"></string>
    <string name="register_note_cn">总则</string>
    <string name="sm_item_comment_like">评论与赞</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @ShareSDK</string>
    <string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @ShareSDK</string>
    <string name="comment_like_id">ssdk20131220190000</string>
    <string name="comment_like_title">ShareSDK“评论与赞”模块发布</string>
    <string name="comment_like_publich_time">2013-12-20 19:00</string>
    <string name="comment_like_author">ShareSDK</string>
    <string name="comment_like_comment_list">跟帖</string>
    <string name="like_success">点赞成功</string>
    <string name="like_fail">点赞失败</string>
    <string name="myplatform">自定义平台</string>
    <string name="title_activity_my_task">MyTaskActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="alert_cancel">取消</string>
    <string name="alert_ok">确定</string>
    <string name="alert_content">提交后此任务状态不可被修改，请您确认该项任务是否完成？</string>
    <string name="title_activity_cultural_exhibit">CulturalExhibitActivity</string>
    <string name="title_activity_my_task_driver">MyTaskDriverActivity</string>
    <string name="title_activity_vipinfo">VIPInfoActivity</string>
    <string name="title_activity_cultrual_exhibit_detail">CultrualExhibitDetailActivity</string>
    <string name="title_activity_cultural_exhibit_list">CulturalExhibitListActivity</string>
    <string name="title_activity_schdule_detail">SchduleDetailActivity</string>
    <string name="title_activity_xing_cheng_detail">XingChengDetailActivity</string>
    <string name="title_activity_vipinfo_second_level">VipinfoSecondLevelActivity</string>
    <string name="title_activity_fixed_task">FixedTaskActivity</string>
    <string name="title_activity_mytask_list">MytaskListActivity</string>
    <string name="title_activity_mytask_vip_list">MytaskVipListActivity</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="title_activity_vip_list_search">VipListSearchActivity</string>
    <string name="title_activity_gaojiao_main">GaojiaoMainActivity</string>
    <string name="title_activity_gao_jiao_hui_base">GaoJiaoHuiBaseActivity</string>
    <string name="title_activity_zhan_shang_particulars">ZhanShangParticulars</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_huo_dong_particulars">HuoDongParticulars</string>
    <string name="title_activity_particulars_huo_dong">ParticularsHuoDong</string>
    <string name="title_activity_sou_suo">SouSuoActivity</string>
    <string name="title_activity_liu_yan">LiuYanActivity</string>
    <string name="title_activity_liu_yan_particulars">LiuYanParticulars</string>
    <string name="net_error">网络异常，请稍后重试。</string>
    <string name="title_activity_zxing">ZxingActivity</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="setting_ninhao">您好，</string>
    <string name="setting_please_login">请登录</string>
    <string name="setting_click_login">点击进行登录或注册</string>
    <string name="setting_supplement_data">点击修改个人资料</string>
    <string name="supplementary_information">补充个人资料</string>
    <string name="personal_data">个人资料</string>
    <string name="setting_language_china">中文</string>
    <string name="setting_language_englishi">English</string>
    <string name="setting_qr_code">高交会二维码</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_set">设置</string>
    <string name="edit">编辑</string>
    <string name="my_free_ticket">我的赠票</string>
    <string name="free_ticket">免费赠票！</string>
    <string name="exhibit_exhibitors">展商</string>
    <string name="exhibit_activity">活动</string>
    <string name="exhibit_attention">关注</string>
    <string name="exhibit_details">展商详情</string>
    <string name="exhibit_leave_message">留言</string>
    <string name="exhibit_place">展商位置：</string>
    <string name="exhibit_contact">联系方式：</string>
    <string name="activity_details">活动详情</string>
    <string name="activity_exhibitors_introduce">展商介绍</string>
    <string name="activity_place">会展地址</string>
    <string name="activity_credentials">活动凭证</string>
    <string name="activity_apply">发起报名</string>
    <string name="activity_audit">报名审核中</string>
    <string name="activity_pass">审核通过</string>
    <string name="please_add_personal_information">请补充个人信息</string>
    <string name="language_title">语言</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string name="qr_code_title">二维码</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>
    <string name="about_us_title">关于我们</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="set_title">设置</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="message_title">留言</string>
    <string name="my_registration">我的报名</string>
    <string name="message_details_title">留言详情</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="home_title">高交会</string>
    <string name="home_language">English</string>
    <string name="home_message">消息</string>
    <string name="home_scaning">扫一扫</string>
    <string name="home_more">更多</string>
    <string name="home_tongzhi">大会通知</string>
    <string name="home_liangdian">亮点推荐</string>
    <string name="home_navigation">展馆导航</string>
    <string name="home_zixun">大会资讯</string>
    <string name="person_name">姓名</string>
    <string name="contact_information">联系方式</string>
    <string name="person_email">邮箱</string>
    <string name="person_post">职务</string>
    <string name="person_company">所属单位</string>
    <string name="invite_code">邀请码</string>
    <string name="home_main">首页</string>
    <string name="home_schedule">日程</string>
    <string name="home_exhibit">展商</string>
    <string name="home_my">个人</string>
    <string name="title_activity_tong_zhi_more">TongZhiMoreActivity</string>
    <string name="tongzhizhongxin">通知中心</string>
    <string name="title_activity_liangdian">LiangdianActivity</string>
    <string name="title_activity_liang_dian_details">LiangDianDetailsActivity</string>
    <string name="exhibit_info">展商信息：</string>
    <string name="exhibit_detail">展商详情：</string>
    <string name="title_activity_tong_zhi_list">TongZhiListActivity</string>
    <string name="title_activity_tong_zhi_detail">TongZhiDetailActivity</string>
    <string name="title_activity_zi_xun_detail">ZiXunDetailActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="login_error">登录失败，请检查用户名密码是否正确</string>
    <string name="not_register">手机号尚未注册，请先注册</string>
    <string name="register">注册</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="get_password"><u>点此找回</u></string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="username_hint">请输入手机号或用户名</string>
    <string name="password_hint">输入密码</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="third_login_hint">-------------使用合作账号登陆--------------</string>
    <string name="r_username_hint">请输入手机号或邮箱账号</string>
    <string name="r_password_hint">6-20位字母、数字结合</string>
    <string name="r_sex_text">性别</string>
    <string name="r_women">女</string>
    <string name="r_man">男</string>
    <string name="r_register">立即注册</string>
    <string name="logout">注销</string>
    <string name="refresh">刷新</string>
    <string name="login_phone_hint">手机号</string>
    <string name="login_username_hint">手机号/账号</string>
    <string name="login_send_validation_code">发送验证码</string>
    <string name="login_validation_code">短信验证码</string>
    <string name="login_use_password">使用密码登录</string>
    <string name="login_use_phone">使用短信验证登录</string>
    <string name="title_activity_get_password">GetPasswordActivity</string>
    <string name="title_activity_leave_message">LeaveMessageActivity</string>
    <string name="edit_phonenum_toast">请输入正确的手机号码</string>
    <string name="edit_validation_toast">请输入正确的验证码</string>
    <string name="login_username_toast">手机号/账号不能为空</string>
    <string name="netless">现在没有网络哦!</string>
    <string name="netless_refresh">刷新</string>
    <string name="all_schedule">全部日程</string>
    <string name="personal_schedule">个人日程</string>
    <string name="offline_mode">离线模式</string>
    <string name="offline_toast">开启离线模式后，无需网络即可浏览日程信息和展商信息</string>
    <string name="start_offline_mode">开启</string>
</resources>