<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#637186" />

        <ImageView
            android:id="@+id/login_username_img"
            android:layout_width="15dp"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/login_icon_username_nor" />

        <EditText
            android:id="@+id/login_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/login_username_img"
            android:background="#00000000"
            android:cursorVisible="true"
            android:ellipsize="end"
            android:hint="@string/login_username_hint"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#637186"
            android:textCursorDrawable="@null"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#637186" />

        <ImageView
            android:id="@+id/login_password_img"
            android:layout_width="15dp"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/login_icon_password_nor" />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/login_password_img"
            android:background="#00000000"
            android:cursorVisible="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#637186"
            android:textCursorDrawable="@null"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/change_to_phone_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_use_phone"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/username_login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/selector_login_button_bg"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="#637186"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/username_getpassword_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_password"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>