<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/offline_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/selector_item_bg_color"
        android:gravity="center"
        android:onClick="netlessOfflineClick"
        >

        <TextView
            android:id="@+id/netless_offline_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:text="@string/offline_mode" 
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/netless_offline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/start_offline_mode" 
            android:textSize="16sp"
            />
        <View 
            android:id="@+id/netless_view"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/view"
            android:layout_below="@id/netless_offline_tv"
            android:layout_marginTop="15dp"
            />
    </RelativeLayout>
    
        <TextView 
            android:id="@+id/netless_offline_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/offline_toast"
            android:background="#f4f5f6"
            android:textColor="#717172"
            android:layout_below="@id/offline_rl"
            />
    <ImageView
        android:id="@+id/netless_offline_img"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="75dp"
        android:layout_marginRight="18dp"
        android:src="@drawable/pic_btn_offline_nor" 
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/netless_offline_toast"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/netless_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="71dp"
                android:src="@drawable/netless" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/netless"
                android:textColor="#717172"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/netless_refresh_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/netless_linear"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/netless_icon_refesh_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netless_refresh"
                android:textColor="#d3d3d3"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>